<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#f6f6f6">


    <TextView
        android:textColor="@color/colorText"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="27sp"/>

    <TextView
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullName"
        android:textSize="20sp"/>

    <!--android:hint="Digite seu nome Completo"-->
    <EditText
        android:hint="@string/hintFullName"
        android:textColorHint="@color/colorHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:textSize="20sp"/>

    <EditText
        android:textColorHint="@color/colorHint"
        android:hint="@string/hintEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textSize="20sp"/>

    <EditText
        android:textColorHint="@color/colorHint"
        android:hint="@string/hintUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"/>

    <EditText
        android:textColorHint="@color/colorHint"
        android:inputType="textPassword"
        android:hint="@string/hintPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retypePassword"
        android:textSize="20sp"/>

    <EditText
        android:textColorHint="@color/colorHint"
        android:inputType="textPassword"
        android:hint="@string/hintRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nationality"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/spinnerNationality"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>